# core

./: .gitignore  ANUNCIO_HISTORICO.md  APRENDE_VADER_FACIL.md  CHANGELOG.md  COMANDOS_VADER_COMPLETOS.md  CONTRIBUTING.md  EJEMPLOS_CONVERSACIONALES.md  ESTRUCTURA_EJEMPLOS.md  GO_CON_VADER.md  INSTALACION.md  INSTALAR_EXTENSION_VSCODE.md  MEJORAS_ENERO_2025.md  PLAN_MEJORAS_CRITICAS.md  PROGRAMAR_COMO_HABLAR.md  README.md  RELEASE_NOTES.md  RUST_CON_VADER.md  VADER_PRODUCTION_ROADMAP.md  VADER_SUPER_FACIL.md  calculadora_generada.vdr  ciberseguridad_transpilado.py  debug_gui.py  demo_avanzado_transpilado.js  demo_avanzado_transpilado.py  demo_completo.html  demo_vader_complete_ecosystem.py  demo_vader_perfecto.vdr  demo_vader_ultra_optimized.py  demo_web.html  ejemplo_simple.html  estilos_simple.css  gui_simple.py  hola_simple.vdr  ia_transpilado.py  instalar.vdr  instalar_simple.vdr  install.bat  install.py  install.sh  install_completo.py  (+94 more)
.github/: CONTRIBUTING.md  pull_request_template.md
componentes/: boton_moderno.vdr  tarjeta_producto.vdr
config/: Info.plist
database/: vader_database.py
demo_cli/: README.md  main.vdr
docs/: CI_CD_IMPLEMENTATION.md  ECOSISTEMA_VADER_UNIVERSAL.md  GUIA_COMPLETA_FRAMEWORKS.md  GUIA_SINTAXIS_COMPARATIVA.md  (+6 more)
vader_native/: Cargo.toml
vader_native/src/: compiler.rs  interpreter.rs  interpreter_old.rs  lexer.rs  lexer_old.rs  lib.rs  main.rs  parser.rs  parser_old.rs  stdlib.rs  types.rs
vader_native/tests/: debug_test.rs  decir_debug.rs  function_debug.rs  logical_operators_debug.rs  parser_debug.rs  runtime_validation.rs
(+279 files in other folders)
